fix: Set shell properties to bash

--- a/action.yml
+++ b/action.yml
@@ -22,12 +22,15 @@ runs:
 
     - name: Install Doxygen
       run: sudo apt-get install doxygen -y
+      shell: bash
 
     - name: Generate Doxygen Documentation
       run: doxygen
+      shell: bash
       
     - name: Create .nojekyll (ensures pages with underscores work on gh pages)
         run: touch docs/html/.nojekyll
+        shell: bash
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
