--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,9 @@ name: 'Doxygen GitHub Pages Deploy Action'
 description: 'Make docs with Doxygen then deploy the generated HTML to GitHub pages'
 
 inputs:
+  github_token:
+    description: 'A GitHub token for pushing to the repo. Example: ${{ secrets.GITHUB_TOKEN }}'
+    required: true
   branch:
     description: 'Branch name for pushing GitHub pages files'
     required: true
@@ -35,6 +38,6 @@ runs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
         branch: ${{ inputs.branch }}
         folder: ${{ inputs.folder }}
