fix: Allow custom directory for .nojekyll

--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
       shell: bash
       
     - name: Create .nojekyll (ensures pages with underscores work on gh pages)
-      run: touch docs/html/.nojekyll
+      run: touch ${{ inputs.folder }}/.nojekyll
       shell: bash
 
     - name: Deploy to GitHub Pages
