feat: Add option to specify config file path

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: 'Folder where Doxygen will generate the HTML build files'
     required: true
     default: "docs/html"
+  config_file:
+    description: 'Path of the Doxygen configuration file'
+    required: true
+    default: "Doxyfile"
 
 runs:
   using: "composite"
@@ -31,7 +35,7 @@ runs:
       shell: bash
 
     - name: Generate Doxygen Documentation
-      run: doxygen
+      run: doxygen ${{ inputs.config_file }}
       shell: bash
       
     - name: Create .nojekyll (ensures pages with underscores work on gh pages)
