install graphviz in the container
really like dot to help deal with big spaghetti

--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ runs:
         submodules: "true"
 
     - name: Install Doxygen
-      run: sudo apt-get install doxygen -y
+      run: sudo apt-get install doxygen graphviz -y
       shell: bash
 
     - name: Generate Doxygen Documentation
