--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
   using: "composite"
   steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         submodules: "true"
 
@@ -43,8 +43,8 @@ runs:
       shell: bash
 
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        github_token: ${{ inputs.github_token }}
+        token: ${{ inputs.github_token }}
         branch: ${{ inputs.branch }}
         folder: ${{ inputs.folder }}
